appId: com.basistheory.ThreeDSTester
---
- launchApp

# Ravelin SDK initializes correctly
- extendedWaitUntil:
    visible: "An emulator is being used to run the App."
    timeout: 60000

# Card 1
- tapOn: "Token ID"
- inputText: "0e2e6f4c-6708-42be-9f0d-c74cdd451a71" #  4200000000000012 Visa

- tapOn:
    text: "Create Session"
    retryTapIfNoChange: false
- assertVisible: "3DS Session Created"
- tapOn:
    text: "Start Challenge"
    retryTapIfNoChange: false
- assertVisible: "Unable to authenticate, 3DS service responded 502"
- tapOn: "Clear"

# Card 2

- tapOn: "Token ID"
- inputText: "a24a4c24-f6a2-4246-8066-aea0f672a05d" #  122000000000003 Airplus

- tapOn:
    text: "Create Session"
    retryTapIfNoChange: false
- assertVisible: "3DS Session Created"
- tapOn:
    text: "Start Challenge"
    retryTapIfNoChange: false
- assertVisible: "Unable to authenticate, 3DS service responded 502"
- tapOn: "Clear"
- stopApp
